--- a/website/newsletter/169/index.mdx
+++ b/website/newsletter/169/index.mdx
@@ -57,7 +57,9 @@ More info, examples and documentation on [Nlux.ai](https://nlux.ai?c-twr1-p2)
 
 ## ⚛️ React {#react}
 
-📜 [The future of React.use and React.useMemo - a powerful alternative to context selectors](https://interbolt.org/blog/react-use-selector-optimization/)
+[![The future of React.use and React.useMemo - a powerful alternative to context selectors](/emails/issues/169/useMemo.jpg)](https://interbolt.org/blog/react-use-selector-optimization/)
+
+**[The future of React.use and React.useMemo - a powerful alternative to context selectors](https://interbolt.org/blog/react-use-selector-optimization/)**
 
 Colin explains how React context can cause performance problems, the lack of a context selector API, and how he optimized an app’s performances thanks to the userland [use-context-selector](https://github.com/dai-shi/use-context-selector) implementation from Daishi Kato.
 
@@ -65,7 +67,15 @@ The most interesting part is a great summary of the [recent Twitter discussions]
 
 ---
 
-📜 [Dan Abramov: The Two Reacts](https://overreacted.io/the-two-reacts/): Great writeup from Dan Abramov, giving good reasons for code to run locally (instant feedback), as well as remotely (close to the data source). He proposes a new React formula: `UI = f(data, state)`, where `f` represents all your whole React app, running in 2 distinct environments.
+[![The Two Reacts](/emails/issues/169/2reacts.jpg)](https://overreacted.io/the-two-reacts/)
+
+**[The Two Reacts](https://overreacted.io/the-two-reacts/)**
+
+Great writeup from Dan Abramov, giving good reasons for code to run locally (instant feedback), as well as remotely (close to the data source). He proposes a new React formula: `UI = f(data, state)`, where `f` represents all your whole React app, running in 2 distinct environments.
+
+This ends with a great question, implicitly asking if you would invent React Server Components to solve this problem.
+
+> Is there some way we could split components between your computer and mine in a way that preserves what’s great about React? Could we combine and nest components from two different environments? How would that work?
 
 ---
 
@@ -84,17 +94,17 @@ The most interesting part is a great summary of the [recent Twitter discussions]
 - 📜 [Harmful complexity: using React for static content](https://gomakethings.com/harmful-complexity-using-react-for-static-content/): Interesting opinion, but I hope to prove the author wrong and believe React is nice for static content, particularly with RSCs.
 - 📜 [How Lee Robinson created his Guestbook, and you can do it too](https://bejamas.io/blog/how-to-create-a-guestbook/?ck_subscriber_id=887776054)
 - 📜 [2024 Predictions by JavaScript Frontend Framework Maintainers](https://thenewstack.io/2024-predictions-by-javascript-frontend-framework-maintainers/)
-- 📦 [Fresnel 7.0 - React 18 support - SSR compatible approach for responsive layouts for React.](https://github.com/artsy/fresnel/releases/tag/v7.0.0)
-- 📦 [@tanstack/router-vite-plugin](https://tanstack.com/router/v1/docs/api/router-vite-plugin)
+- 📦 [Fresnel 7.0 - React 18 support - SSR compatible approach for responsive layouts for React](https://github.com/artsy/fresnel/releases/tag/v7.0.0)
+- 📦 [@tanstack/router-vite-plugin - Vite alternative to the router CLI](https://tanstack.com/router/v1/docs/api/router-vite-plugin)
+- 📦 [Docusaurus 3.1 - built-in broken anchors detectors, `parseFrontMatter` hook](https://docusaurus.io/blog/releases/3.1)
 - 📦 [Astro 4.1 - Accessibility audit rules, client:visible rootMargin, custom cookie encoding](https://astro.build/blog/astro-410/)
-- 📦 [Docusaurus 3.1](https://docusaurus.io/blog/releases/3.1)
 - 📦 [Mutative 1.0 - Efficient immutable updates, 10x faster than Immer](https://dev.to/unadlib/announcing-mutative-10-a-new-era-in-efficient-immutable-updates-nml)
-- 📦 [JSX email 1.7.0](https://github.com/shellscape/jsx-email)
-- 🔨 [Palettify](https://palettify.co/) ??? [https://twitter.com/mehdibha\_/status/1741191971748630718](https://twitter.com/mehdibha_/status/1741191971748630718)
+- 📦 [JSX email 1.7 - A fork of react-email that keeps being improved](https://github.com/shellscape/jsx-email)
+- 🔨 [Palettify - Get an instant preview for your theme - supports shadcn/ui and soon MUI](https://palettify.co/)
 - 🔗 [Remix Resources](https://remix.run/resources)
 - 🎥 [Jack Herrington - HTMX For React Developers in 10 Minutes](https://www.youtube.com/watch?v=r0XBULqzsT0)
 - 🎥 [Lee Robinson - React Server Components: the Good, the Bad, and the Ugly](https://www.youtube.com/watch?v=8DyzsSWNcDE)
-- 🎥 [Remix Singles "Trellix": Cookies, Auth, and Drag & Drop](https://www.youtube.com/watch?v=RTHzZVbTl6c&list=PLXoynULbYuED9b2k5LS44v9TQjfXifwNu): Nice series of 15 short videos by the Remix team, building a Trello clone (see the [demo app](https://trellix.fly.dev/)).
+- 🎥 [Remix Singles - "Trellix" - Cookies, Auth, and Drag & Drop](https://www.youtube.com/watch?v=RTHzZVbTl6c&list=PLXoynULbYuED9b2k5LS44v9TQjfXifwNu): 15 short videos by the Remix team, building a Trello clone (see the [demo app](https://trellix.fly.dev/)).
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -125,7 +135,7 @@ Trusted by corporate clients such as The Weather Channel, Deel.com, La Banque Po
 
 ---
 
-- 💸[Galaxies.dev - Master React Native & Save 25% on PRO with code GALAXIES24](https://galaxies.dev?utm_source=thisweekinreact.com)
+- 💸 [Galaxies.dev - Master React Native & Save 25% on PRO with code GALAXIES24](https://galaxies.dev?utm_source=thisweekinreact.com)
 - 👀 [Proposal: Hover style API for iPad / Apple Vision Pro](https://github.com/react-native-community/discussions-and-proposals/pull/750) The iPad supports hover effects for mouse/trackpad users, and this will also be useful for Apple’s upcoming Vision Pro, where navigation elements get highlighted when the user looks at them.
 - 📜 [Introduction to Reanimated](https://www.reactiive.io/articles/introduction-to-reanimated): A good introductory article to learn about the concepts behind one of the most popular animation libraries for RN: shared values, reanimated style, animated view.
 - 📦 [React-Native v0.73.2 + v0.72.9 + v0.71.15](https://github.com/facebook/react-native/issues/42180): new releases fix the "Error installing boost Verification checksum” iOS build errors, among other things.
