--- a/website/newsletter/169/index.mdx
+++ b/website/newsletter/169/index.mdx
@@ -129,7 +129,7 @@ Trusted by corporate clients such as The Weather Channel, Deel.com, La Banque Po
 
 ## 📱 React-Native {#react-native}
 
-[![[Who's using Expo OSS in 2024](/emails/issues/169/expo.jpg)](https://evanbacon.dev/blog/expo-2024)
+[![Who's using Expo OSS in 2024](/emails/issues/169/expo.jpg)](https://evanbacon.dev/blog/expo-2024)
 
 **[Who's using Expo OSS in 2024](https://evanbacon.dev/blog/expo-2024)**: Evan Bacon gathered an impressive list of 1,599 apps that are using Expo libraries (and therefore, React Native). The list includes household names like Pizza Hut, Burger King, Microsoft, Discord, Shopify, NFL, Walgreens, Amazon, CNN, and many more. It’s not news to us that React Native is thriving, but it’s nevertheless encouraging to see the big role that it plays when you look at top apps in the App Store.
 
